# antigravity-bot

./: .env.example  .gitignore  .gitmodules  AGENTS.md  GEMINI.md  pyproject.toml  readme.md  run.sh
decisions/: 0001-validate-antigravity-cdp-workbench.md  0002-test-launcher-lifecycle.md  0003-vendor-lazygravity-submodule.md  0004-integrate-pending-lazygravity-prs.md  0005-add-pylint-code-quality-linting.md  0006-discord-ide-lifecycle.md  README.md  release.md
tests/: test_pylint.py  test_run_script.py
